# word2vec-numpy

./: README.md  pyproject.toml  requirements.txt
notebooks/: demo.ipynb
scripts/: run_demo.py  simple_train.py
src/word2vec/: __init__.py  config.py  dataset.py  model.py  optim.py  pipeline.py  trainer.py  utils.py  vocab.py
