[project]
name = "word2vec-numpy"
version = "0.1.0"
description = "Pure NumPy implementation of the Word2Vec training loop (skip-gram with negative sampling), including forward pass, loss computation, gradient derivations, and parameter updates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
]
